fix styling of error screen on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,8 @@ body {
 }
 
 #error-content {
-  font-size: 125%;
-  margin-inline: 1em;
-  width: clamp(200px, 60%, 800px);
+  padding: 1em;
+  width: clamp(200px, 100%, 800px);
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 175px 50px auto auto;
